# metadesk

./: .gitignore  SPEC.md  meson.build  meson_options.txt
.beads/: metadata.json
.obsidian/: workspace.json
config/: metadesk.toml.example
docs/: AGENT_API.md  metadesk-spec.md
src/client/: main.c  render.c  render.h  ui.cpp  ui.h
src/core/: a11y.c  a11y.h  a11y_atspi.c  a11y_axui.m  a11y_uia.cpp  action.c  action.h  agent.c  agent.h  atspi.c  atspi.h  capture.c  capture.h  capture_dxgi.cpp  capture_pipewire.c  capture_screencapturekit.m  decode.c  decode.h  encode.c  encode.h  encode_videotoolbox.m  fips_addr.c  fips_addr.h  input.c  input.h  input_cgevent.m  input_sendinput.cpp  input_uinput.c  ipc.h  ipc_unix.c  ipc_win32.c  nostr.c  nostr.h  packet.c  packet.h  platform.h  secrets.c  secrets.h  session.c  session.h  (+4 more)
src/fips-nat/: main.c  publish.c  publish.h  punch.c  punch.h  stun.c  stun.h
src/host/: main.c
subprojects/imgui/: .gitkeep
tests/: test_agent.c  test_atspi.c  test_encode.c  test_fips_addr.c  test_input.c  test_nostr.c  test_packet.c  test_secrets.c  test_signer.c  test_signer_nip46.c  test_signer_nip55l.c  test_signer_nip5f.c  test_stream.c
tools/: atspi_dump.c  capture_frame.c  encode_roundtrip.c
