option('nvenc',    type : 'boolean', value : true,
       description : 'Enable NVENC hardware encoding (requires NVIDIA GPU + drivers)')
option('client',   type : 'boolean', value : true,
       description : 'Build the human video client (requires SDL2 + Dear ImGui)')
option('fips_nat', type : 'boolean', value : true,
       description : 'Build the fips-nat NAT traversal daemon (requires libnice)')
option('signer_nip46', type : 'boolean', value : false,
       description : 'Enable NIP-46 Nostr Connect remote signer backend (requires nostrc nip46)')
option('signer_nip55l', type : 'boolean', value : false,
       description : 'Enable NIP-55L D-Bus local signer backend (requires nostrc nip55l + GIO)')
option('signer_nip5f', type : 'boolean', value : false,
       description : 'Enable NIP-5F Unix socket signer backend (requires nostrc nip5f)')
